--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,8 +18,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
+        cd volumes/flask
         pwd
-        cd ../..
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Lint with flake8
